objects/ServiceAppointment.object
<CustomObject>
    <fields>
        <fullName>Accel_Solution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Solution</label>
        <referenceTo>Solution__c</referenceTo>
        <relationshipLabel>Service Appointments</relationshipLabel>
        <relationshipName>Service_Appointments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Acceptance_Time__c</fullName>
        <formula>((( Time_Accepted__c  - CreatedDate)*24)*60)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dispatched Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Appointments_in_Queue__c</fullName>
        <description>Picklist used to display if there are appointments in Queue for a Technician in the List View on the SFS Movile App. Populated by flow Service Resource - After Update.</description>
        <inlineHelpText>Picklist used to display if there are appointments in Queue for a Technician in the List View on the SFS Movile App.</inlineHelpText>
        <label>Appointments in Queue</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Appointments in Queue: Yes</fullName>
                </value>
                <value>
                    <fullName>Appointments in Queue: No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assigned_Rank__c</fullName>
        <formula>Work_Order__r.Case.Assigned_Rank__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned Rank</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cancelled_Cannot_Complete_Reason__c</fullName>
        <label>Cancelled/Cannot Complete Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Case_Created_Date_Time__c</fullName>
        <formula>Work_Order__r.Case.CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Created Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Case_Status__c</fullName>
        <formula>TEXT( Work_Order__r.Case.Status )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <description>Used to pull in the case id in order to update related case using automations
Please, do not add to any layouts</description>
        <formula>Work_Order__r.Case.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closed_With_Flow__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that a Service Appointment was closed with the Close Service Appointment mobile flow</description>
        <label>Closed With Flow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CreatedTime__c</fullName>
        <formula>(TIMEVALUE( CreatedDate ))-18000000</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Created_Date_Time__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Critical_Priority_Checkbox__c</fullName>
        <formula>OR(
Service_Appointment_Priority__c = 0,
Service_Appointment_Priority__c = 1,
Service_Appointment_Priority__c = 2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Critical Priority</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Defer_to_Location_Open_Time__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that a user specified a future date/time that this location opens and is next available to be serviced. When this checkbox is checked, the Service Appointment will not auto-dispatch even if it is the only Service Appointment in a given Service Resource&apos;s shift.</description>
        <label>Defer to Location Open Time</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>En_Route__c</fullName>
        <defaultValue>false</defaultValue>
        <label>En Route</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL_GanttColor_c__c</fullName>
        <defaultValue>&apos;#ff0000&apos;</defaultValue>
        <label>FSL__GanttColor__c</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL__Appointment_Grade__c</fullName>
        <label>Appointment Grade</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Auto_Schedule__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Schedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Duration_In_Minutes__c</fullName>
        <formula>IF (ISBLANK(SchedStartTime), 0, (SchedEndTime - SchedStartTime)*24*60)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration In Minutes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Emergency__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Emergency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__GanttColor__c</fullName>
        <label>Gantt Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL__GanttIcon__c</fullName>
        <inlineHelpText>Enter a URL for an icon. The URL must end in an image suffix, such as .png.</inlineHelpText>
        <label>Gantt Icon</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FSL__GanttLabel__c</fullName>
        <label>Gantt Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL__Gantt_Display_Date__c</fullName>
        <label>Gantt Display Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FSL__InJeopardyReason__c</fullName>
        <label>In Jeopardy Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Delayed Start</fullName>
                </value>
                <value>
                    <fullName>Delayed Finish</fullName>
                </value>
                <value>
                    <fullName>No Response</fullName>
                </value>
                <value>
                    <fullName>Due Date Approaching</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSL__InJeopardy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In Jeopardy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__InternalSLRGeolocation__c</fullName>
        <label>Internal SLR Geolocation</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>FSL__IsFillInCandidate__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Fill In Candidate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__IsMultiDay__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is MultiDay</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Last_Updated_Epoch__c</fullName>
        <label>Last Updated Epoch</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__MDS_Calculated_length__c</fullName>
        <label>Multiday Work Calculated length</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__MDT_Operational_Time__c</fullName>
        <label>Multiday Work Operational Time</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FSL__Pinned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pinned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Prevent_Geocoding_For_Chatter_Actions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prevent Geocoding For Chatter Actions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Related_Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Service</label>
        <referenceTo>ServiceAppointment</referenceTo>
        <relationshipLabel>Service Appointments</relationshipLabel>
        <relationshipName>Service_Appointments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSL__Same_Day__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Same Day</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Same_Resource__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Same Resource</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Schedule_Mode__c</fullName>
        <label>Schedule Mode</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Manual</fullName>
                </value>
                <value>
                    <fullName>Automatic</fullName>
                </value>
                <value>
                    <fullName>Optimization</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSL__Schedule_over_lower_priority_appointment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Schedule Over Lower Priority Appointment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Scheduling_Policy_Used__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scheduling Policy Used</label>
        <referenceTo>FSL__Scheduling_Policy__c</referenceTo>
        <relationshipLabel>Service Appointments</relationshipLabel>
        <relationshipName>Service_Appointments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSL__Time_Dependency__c</fullName>
        <label>Time Dependency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Same Start</fullName>
                </value>
                <value>
                    <fullName>Start After Finish</fullName>
                </value>
                <value>
                    <fullName>Finish Before Start</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSL__UpdatedByOptimization__c</fullName>
        <defaultValue>false</defaultValue>
        <label>UpdatedByOptimization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Use_Async_Logic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Async Logic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Virtual_Service_For_Chatter_Action__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Virtual Service For Chatter Action (SLR)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Force_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in FSM flow to update the Service Appointment to check if there are Appoointments in Queue.</description>
        <inlineHelpText>Used in FSM flow to update the Service Appointment to check if there are Appoointments in Queue.</inlineHelpText>
        <label>Force Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>High_Priority_Checkbox__c</fullName>
        <formula>OR(
Service_Appointment_Priority__c = 3,
Service_Appointment_Priority__c = 4,
Service_Appointment_Priority__c = 5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>High Priority</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inactive_Work_Type__c</fullName>
        <formula>WorkType.Inactive__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inactive Work Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Initial_Tech_Arrival_Time__c</fullName>
        <formula>(((Time_In_Progress__c - Work_Order__r.Case.CreatedDate )*24)*60)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Initial Tech Arrival Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By_User_Name__c</fullName>
        <formula>LastModifiedBy.FirstName + &quot; &quot; +  LastModifiedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Modified By User Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Time__c</fullName>
        <formula>(TIMEVALUE( LastModifiedDate-0.20833333 ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Modified Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Length_of_Open_Work_Order__c</fullName>
        <formula>Time_Complete__c -   CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Days of Open Service Appointment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Live_with_WM_Scheduling_Enhancements__c</fullName>
        <description>Indicates whether the Service Territory defined on this Service Appointment is live with the scheduling enhancements built out by West Monroe in 2022.</description>
        <formula>ServiceTerritory.Live_with_WM_Scheduling_Enhancements__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Live with WM Scheduling Enhancements</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location_Priority__c</fullName>
        <description>Pulled from the work order</description>
        <label>Location Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HIGH PRIORITY</fullName>
                </value>
                <value>
                    <fullName>MEDIUM PRIORITY</fullName>
                </value>
                <value>
                    <fullName>LOW PRIORITY</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Low_Priority_Checkbox__c</fullName>
        <formula>OR(
 Service_Appointment_Priority__c = 10,
 Service_Appointment_Priority__c = 9,
 Service_Appointment_Priority__c = 8)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Low Priority</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Machine_Down_Upon_Arrival__c</fullName>
        <description>Determines if the VGT or Redemption was not operational upon a tech&apos;s arrival on site</description>
        <label>Machine Down Upon Arrival</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Machine_Up_Upon_Departure__c</fullName>
        <label>Machine Up Upon Departure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Medium_Priority_Checkbox__c</fullName>
        <formula>OR(
Service_Appointment_Priority__c = 6,
Service_Appointment_Priority__c = 7)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Medium Priority</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Minutes_Since_Dispatched__c</fullName>
        <formula>(now()-Time_Accepted__c)*1440</formula>
        <label>Minutes Since Dispatched</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minutes_Since_En_Route__c</fullName>
        <formula>(now()- Time_Start_En_Route__c )*1440</formula>
        <label>Minutes Since En Route</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Old_Service_Appointment_Priority__c</fullName>
        <description>Calculated on the case, Service Appointment Priority is used in Field Service to determine which Service Appointment to schedule first on the Gantt.</description>
        <inlineHelpText>Calculated on the case, Service Appointment Priority is used in Field Service to determine which Service Appointment to schedule first on the Gantt.</inlineHelpText>
        <label>Old Service Appointment Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>On_Site_Duration__c</fullName>
        <formula>((( Time_Complete__c  -  Time_In_Progress__c )*24)*60)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>On-Site Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>On_site__c</fullName>
        <defaultValue>false</defaultValue>
        <label>On-site</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Overtime_Approver__c</fullName>
        <formula>Service_Resource_Shift__r.Overtime_Approver__r.FirstName + &quot; &quot; +  Service_Resource_Shift__r.Overtime_Approver__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overtime Approver</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overtime_Reason__c</fullName>
        <formula>Service_Resource_Shift__r.Overtime_Reason__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overtime Reason</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pending_Acceptance_Time__c</fullName>
        <formula>if(isblank(Time_Accepted__c),
((( Now() - CreatedDate)*24)*60),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pending Acceptance Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <formula>Text(Account.Priority__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Priority</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Productivity_Indicator__c</fullName>
        <formula>((( Time_Start_En_Route__c - Time_Accepted__c )*24)*60)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Productivity Indicator</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reject__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reject</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rejected_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Last technician to reject this service appointment. To find the full list of technicians who rejected, go to field history tracking.</description>
        <inlineHelpText>Last technician to reject this service appointment. To find the full list of technicians who rejected, go to field history tracking.</inlineHelpText>
        <label>Rejected By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Service_Appointments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rejected_Time__c</fullName>
        <formula>If(ispickval( StatusCategory, &quot;Canceled&quot;), (((LastModifiedDate -  CreatedDate)*24)*60), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rejected Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Response_Time__c</fullName>
        <formula>((( Time_In_Progress__c -  CreatedDate )*24)*60)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Response Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Appointment_Priority_Text__c</fullName>
        <formula>TEXT(Service_Appointment_Priority__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Appointment Priority</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Appointment_Priority__c</fullName>
        <description>Calculated on the case, Service Appointment Priority is used in Field Service to determine which Service Appointment to schedule first on the Gantt.</description>
        <inlineHelpText>Calculated on the case, Service Appointment Priority is used in Field Service to determine which Service Appointment to schedule first on the Gantt.</inlineHelpText>
        <label>Service Appointment Priority</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Category__c</fullName>
        <description>Currently not restricting picklist to avoid lack of communication errors and inability to create a SA.. (Case.Service_Category__c should probably be a global PL)</description>
        <label>Service Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Amusement</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Maintenance</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>RT</fullName>
                </value>
                <value>
                    <fullName>SGI</fullName>
                </value>
                <value>
                    <fullName>Standalone ATM</fullName>
                </value>
                <value>
                    <fullName>Sweepstakes</fullName>
                </value>
                <value>
                    <fullName>Upgrade Appointment</fullName>
                </value>
                <value>
                    <fullName>VGT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Resource_Shift__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field used to hold what Shift was used to service the Service Appointment</description>
        <label>Service Resource Shift</label>
        <referenceTo>Shift</referenceTo>
        <relationshipLabel>Service Appointments</relationshipLabel>
        <relationshipName>Service_Appointments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Service Resource.</description>
        <inlineHelpText>Lookup to Service Resource.</inlineHelpText>
        <label>Service Resource</label>
        <referenceTo>ServiceResource</referenceTo>
        <relationshipLabel>Service Appointments</relationshipLabel>
        <relationshipName>Service_Appointments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Resource_on_SR_Shift__c</fullName>
        <formula>CASESAFEID(Service_Resource_Shift__r.ServiceResourceId)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Resource on SR Shift</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Zone__c</fullName>
        <formula>TEXT(Work_Order__r.Account.Service_Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Zone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solution_Notes__c</fullName>
        <label>Tech Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Solution__c</fullName>
        <label>Solution</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Solution</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_Field_Set_Display__c</fullName>
        <formula>IF( ISPICKVAL( Status , &apos;Cannot Complete&apos;), &apos;Cannot Complete - &apos; + TEXT( Substatus__c ),

IF( ISPICKVAL( Status, &apos;In Progress&apos;), &apos;On-Site&apos; , TEXT(Status )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Substatus__c</fullName>
        <description>Substatus for Service Appointment is used to clarify a status that does not need to appear on the Gantt. Primarily used for Cannot Complete.</description>
        <inlineHelpText>Substatus for Service Appointment is used to clarify a status that does not need to appear on the Gantt. Primarily used for Cannot Complete.</inlineHelpText>
        <label>Substatus</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Location Closed</fullName>
                </value>
                <value>
                    <fullName>Logic Box Access</fullName>
                </value>
                <value>
                    <fullName>Parts On Order</fullName>
                </value>
                <value>
                    <fullName>Additional Help Required</fullName>
                </value>
                <value>
                    <fullName>LnW Tech Needed</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <isActive>false</isActive>
                    <label>Other</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tech_Notes_Mobile__c</fullName>
        <description>Temporary Field Used in the mobile app to populate Tech notes without overriding other Users&apos; notes.</description>
        <inlineHelpText>Temporary Field Used in the mobile app.</inlineHelpText>
        <label>Tech Notes Mobile</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Time_Accepted__c</fullName>
        <label>Time Dispatched</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Time_Complete__c</fullName>
        <label>Time Complete</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Time_In_Progress__c</fullName>
        <label>Time On-site</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Time_Related_Case_Created__c</fullName>
        <formula>DateTimeValue(Work_Order__r.Case_Create_Date_Time__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Related Case Created</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Time_Start_En_Route__c</fullName>
        <label>Time Start En Route</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Today__c</fullName>
        <description>Today&apos;s Date. Used in DLRS field Service Appointments in Queue logic.</description>
        <formula>today()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Today&apos;s Date. Used in DLRS field Service Appointments in Queue logic.</inlineHelpText>
        <label>Today</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Duration__c</fullName>
        <formula>((( Time_Complete__c  -  CreatedDate )*24)*60)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Travel_Time__c</fullName>
        <formula>((( Time_In_Progress__c  -  Time_Start_En_Route__c )*24)*60)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Travel Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Was_Overtime_Used__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to indicate if the Service Appointment used an Overtime Shift to complete it</description>
        <label>Was Overtime Used?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Was_Software_Gameset_Changed__c</fullName>
        <label>Was Software/Gameset Changed?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>Service Appointments</relationshipLabel>
        <relationshipName>Service_Appointments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Work_Type_Name__c</fullName>
        <formula>WorkType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Work Type Name</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All_Agent_Appointment_SA</fullName>
        <columns>Account</columns>
        <columns>Name</columns>
        <columns>CITY</columns>
        <columns>ServiceTerritory</columns>
        <columns>LastModifiedBy</columns>
        <columns>Solution__c</columns>
        <columns>Solution_Notes__c</columns>
        <columns>CreatedDate</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status</field>
            <operation>equals</operation>
            <value>Agent Appointment</value>
        </filters>
        <filters>
            <field>Name</field>
            <operation>equals</operation>
            <value>SA-81824</value>
        </filters>
        <label>All Agent Appointment SA</label>
        <sharedTo>
            <group>Admin_Users</group>
            <group>Super_User</group>
        </sharedTo>
    </listViews>
</CustomObject>